Fix z-index for header bug.

--- a/src/sass/_commons.scss
+++ b/src/sass/_commons.scss
@@ -24,6 +24,7 @@ a {
 // Header
 header {
     position: fixed;
+    z-index: 3;
     width: 100%;
 }
 
